--- a/dark.css
+++ b/dark.css
@@ -1,14 +1,16 @@
-body {
+@media (prefers-color-scheme: dark) {
+ body {
 	color:#ffffff;
 	background-color:#000;
-}
+ }
 
-a {
+ a {
 	color:#fffc00;
 	background-color:#000;
-}
+ }
 
-a:hover {
-  color:#ff5f5c;
-  background-color:#000;
+ a:hover {
+	color:#ff5f5c;
+	background-color:#000;
+ }
 }
